--- a/styles/custom.css
+++ b/styles/custom.css
@@ -17,3 +17,10 @@
     object-fit: cover;
     box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.2);
 }
+
+input[type=submit].input-to-btn{
+    cursor: pointer;
+}
+input[type=submit].input-to-btn:hover{
+    opacity: 0.7;
+}
